# ML_Isotopologue_Extrapolation

./: .gitignore  README.md  environment.yml  pixi.toml  pyproject.toml  requirements.txt
configs/: co2_basic.yml  co2_cv.yml  co_with_co2.yml  h2o_basic.yml
scripts/: combine_datasets.py  inference_analysis.py  isotopologue_masses.py  postprocess_inference.py  preprocess_co.py  preprocess_co2.py  preprocess_h2o.py  preprocessing_co.py  split_ma_ca_co2.py
src/: analysis.py  data_loader.py  experiments.py  inference.py  main.py  models.py  plotting.py  training.py  utils.py
