[project]
name = "ml-isotopologue-extrapolation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "keras>=3.12.0",
    "matplotlib>=3.10.8",
    "mpi4py>=4.1.1",
    "notebook>=7.5.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch==2.4.1+cu118",
    "torchaudio==2.4.1+cu118",
    "torchvision==0.19.1+cu118",
    "tqdm>=4.67.1",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true  # Ensures packages don't fall back to PyPI

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
